--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ folium
 streamlit-folium
 gensim
 scipy
-spacy
+spacy==3.7.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 spacy-transformers
 sumy
