--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.32.2
 pandas
 numpy
 plotly
@@ -7,13 +7,12 @@ geopandas
 matplotlib
 scikit-learn
 joblib
-nltk
+nltk==3.8.1
 seaborn
 folium
 streamlit-folium
 gensim
-scipy
-spacy
+spacy==3.8.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 spacy-transformers
 sumy
